force-app/main/default/objects/RMS_Audit_Log__c/RMS_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Audit trail for RMS flag, manifest, shipping, and reconciliation changes.</description>
    <label>RMS Audit Log</label>
    <nameField>
        <displayFormat>RMSA-{000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMS Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>