force-app/main/default/objects/RMS_Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action</label>
    <length>80</length>
    <type>Text</type>
</CustomField>