force-app/main/default/objects/RMS_Audit_Log__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>RMS Audit Logs</relationshipLabel>
    <relationshipName>RMS_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>