force-app/main/default/objects/RMS_Audit_Log__c/fields/DHS_Case__c.field-meta.xml
<CustomField>
    <fullName>DHS_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>DHS_Case__c</referenceTo>
    <relationshipLabel>RMS Audit Logs</relationshipLabel>
    <relationshipName>RMS_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>