force-app/main/default/objects/RMS_Audit_Log__c/fields/Manifest__c.field-meta.xml
<CustomField>
    <fullName>Manifest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manifest</label>
    <referenceTo>RMS_Manifest__c</referenceTo>
    <relationshipLabel>RMS Audit Logs</relationshipLabel>
    <relationshipName>RMS_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>